opam-version: "1.2"
maintainer: "andy.ray@ujamjar.com"
authors: "andy.ray@ujamjar.com"
homepage: "https://github.com/ujamjar/hardcaml-affirm"
dev-repo: "https://github.com/ujamjar/hardcaml-affirm.git"
bug-reports: "https://github.com/ujamjar/hardcaml-affirm/issues"
build: [ ["jbuilder" "build" "-p" name "-j" jobs] ]
depends: [
  "ocamlfind" {build}
  "jbuilder" {build & >= "1.0+beta8"}
  "base-bytes"
  "astring"
  "hardcaml" { >= "1.2.0" & < "2.0.0" }
  "sattools"
  "hardcaml-bloop"
  "hardcaml-waveterm" { >= "0.2" }
]
available: [ ocaml-version >= "4.02.0" ]
name: "hardcaml-affirm"
version: "0.2.0"
license: "ISC"

